fix the spacing between header

--- a/modules/section-1/style.css
+++ b/modules/section-1/style.css
@@ -151,6 +151,7 @@
           flex-direction: row;
           /* flex-wrap: wrap; */
           position: relative;
+          margin-top: 46px;
       }
 
       .hero-banner-container {
